--- a/pages/sanitaetshaus.html
+++ b/pages/sanitaetshaus.html
@@ -60,7 +60,7 @@ permalink: /sanitaetshaus
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
         </a>
-        <div class="card card-link">
+        <a href="/sanitaetshaus/orthesen" class="card card-link">
             <div class="card__text">
                 <h4>Orthesen</h4>
                 <p>Erfassung und Korrektur von körperlichen Fehlstellungen im Body-Check-Center.</p>
@@ -72,7 +72,7 @@ permalink: /sanitaetshaus
                 </ul>
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
-        </div>
+        </a>
         
         <div class="card">
             <div class="card__text">
