--- a/pages/Sanitaetshaus/orthesen.html
+++ b/pages/Sanitaetshaus/orthesen.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Walter Borchard | Bandagen
+title: Walter Borchard | Orthesen
 description: 
-permalink: /sanitaetshaus/bandagen
+permalink: /sanitaetshaus/orthesen
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
@@ -18,17 +18,17 @@ permalink: /sanitaetshaus/bandagen
             <a href="/regionale-versorgung" class="nav__menu-item">Regionale Versorgung</a>
         </div>
     </nav>
-    <div class="header__image header__image--center header__image--sani">
+    <div class="header__image header__image--center header__image--orthese">
       <div class="header__text">
-        <h1>Bandagen</h1>
+        <h1>Orthesen</h1>
       </div>
     </div>
 </header>
 
 <main>
     <div class="text">
-        <p>Die modernen aktiven Bandagen entfalten Ihre Wirkung am Besten bei körperlicher Bewegung. Die Stimulation von Propriozeptoren und die Massage-Kompressions-Wirkung des Gestricks regen die Durchblutung an und verbessern den Stoffwechsel. Das beschleunigt die Heilung.</p>
-        <p>Ihre Aktivbandage tragen Sie daher am Besten, wen Sie sich viel bewegen. Bei Passivität – etwa abends vor dem Fernseher – ist dies in der Regel nicht notwendig, sofern nicht anders vom Arzt vorgegeben.</p>
+        <p>Häufig werden die Begriffe Orthesen und Bandagen in einem Satz verwendet, doch worin liegen die Unterschiede?</p>
+        <p>Die Aufgabe einer Orthese ist Funktionsersatz oder Funktionsunterstützung. Außerdem schützen und stützen sie den Bewegungsapparat. Als ärztlich verordnetes medizinisches Hilfsmittel fördern sie die Heilung von Verletzungen und Erkrankungen des Halte- und Bewegungsapparates. In der Kombination mit therapeutisch begleitenden Maßnahmen (z.B. Physiotherapie) beugen sie Fehlhaltungen und Fehlbelastungen vor.</p>
     
 
     <div class="service-cards section__element">
@@ -36,9 +36,9 @@ permalink: /sanitaetshaus/bandagen
                 <div class="card__text">
                     <h4>Sprunggelenk*</h4>
                     <ul class="card__list text__list">
-                        <li>MalleoTrain</li>
-                        <li>TaloStabil Sport</li>
-                        <li>MalleoTrain S</li>
+                        <li>AirCast-Air-Stirrup II </li>
+                        <li>AirCast-AirGo </li>
+                        <li>MalleoLoc</li>
                     </ul>
                 </div>
             </div>
@@ -47,9 +47,9 @@ permalink: /sanitaetshaus/bandagen
                 <div class="card__text">
                     <h4>Kniegelenk*</h4>
                     <ul class="card__list text__list">
-                        <li>GenuTrain</li>
-                        <li>StabiloGen Eco (Jeans Edition)</li>
-                        <li>GenuTrain A3</li>
+                        <li>DonJoy</li>
+                        <li>SecuTec Genu</li>
+                        <li>SofTec Genu</li>
                     </ul>
                 </div>
             </div>
@@ -58,9 +58,9 @@ permalink: /sanitaetshaus/bandagen
                 <div class="card__text">
                     <h4>Rücken/Becken*</h4>
                     <ul class="card__list text__list">
-                        <li>LumboTrain</li>
-                        <li>VarioBasic mit Pelotte</li>
-                        <li>StabiloBasic</li>
+                        <li>Generation Rückenorthese</li>
+                        <li>LumboLoc Forte</li>
+                        <li>SofTec Dorso</li>
                     </ul>
                 </div>
             </div>
@@ -69,9 +69,9 @@ permalink: /sanitaetshaus/bandagen
                 <div class="card__text">
                     <h4>Arm/Hand*</h4>
                     <ul class="card__list text__list">
-                        <li>ManuTrain</li>
-                        <li>ManuBasic Sport</li>
-                        <li>EpiTrain</li>
+                        <li>ManuLoc</li>
+                        <li>SoftVolare CTS-Schiene</li>
+                        <li>EpiPoin</li>
                     </ul>
                 </div>
             </div>
@@ -79,17 +79,13 @@ permalink: /sanitaetshaus/bandagen
                 * unterschiedliche Ausführung je nach Indikation
             </div>
         </div>
-
-        <div class="text__element-row section__element">
-            <div>
-                <p>Basis-, Qualitäts- und Premiumprodukte unterscheiden sich ist in erster Linie in deren Material und Gestrick (z.B. 3D-Gestrick).</p>
-                <p>Bei einer kurzfristigen Akutversorgung kann durchaus ein Basisprodukt ausreichend sein. Bei Dauerversorgung mit Bandagen sind Materialeigenschaften wie z.B. atmungsaktives Gestrick positiv, um die Hautverträglichkeit  zu gewährleisten.</p>
-                <p>Vor Ort können Sie die Produkte selber anprobieren und sich von unseren freundlichen und kompetenten Mitarbeiterinnen beraten lassen.</p>
-                <p>Außerdem empfehlen wir, vom Arzt/Facharzt eine gezielte Diagnose erstellen zu lassen.</p>
-            </div>
-            <img class="text__image text__image--float" id="bauerfeind-plakat" src="/assets/bauerfeind-anatomie.png" alt="Bauerfeind Bandagen">
+        <div class="section__element">
+        <p>Basis-, Qualitäts- und Premiumprodukte unterscheiden sich ist in erster Linie in deren Material und Gestrick (z.B. 3D-Gestrick).</p>
+        <p>Grundsätzlich müssen Orthesen angepasst und eingestellt werden. Je nach Modell und Art ist eine Nachversorgung nach Angaben des behandelnden Arztes möglich oder notwendig. Zum einen gibt der Arzt das Modell vor zum anderen besteht die Möglichkeit Alternativprodukte auszuprobieren.</p>
+        <p>Vor Ort können Sie die Produkte selber anprobieren und sich von unseren freundlichen und kompetenten Mitarbeiterinnen beraten lassen.</p>
+        <p>Außerdem empfehlen wir, vom Arzt/Facharzt eine gezielte Diagnose erstellen zu lassen.</p>
         </div>
-
+        </div>
 
         </div>
 
