--- a/pages/orthopaedie-schuhtechnik.html
+++ b/pages/orthopaedie-schuhtechnik.html
@@ -40,7 +40,7 @@ permalink: /orthopaedie-schuhtechnik
         </p>
     </div>
     <div class="service-cards section__element">
-        <div class="card card-link">
+        <a href="/orthopaedie-schuhtechnik/orthopaedische-massschuhe" class="card card-link">
             <div class="card__text">
                 <h4>Orthopädische <br>Maßschuhe</h4>
                 <ul class="card__list text__list">
@@ -53,8 +53,8 @@ permalink: /orthopaedie-schuhtechnik
                 </ul>
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
-        </div>
-        <div class="card card-link">
+        </a>
+        <a href="/orthopaedie-schuhtechnik/einlagentechnik" class="card card-link">
             <div class="card__text">
                 <h4>Einlagentechnik</h4>
                 <ul class="card__list text__list">
@@ -66,8 +66,8 @@ permalink: /orthopaedie-schuhtechnik
                 </ul>
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
-        </div>
-        <div class="card card-link">
+        </a>
+        <a href="/orthopaedie-schuhtechnik/fuss-und-koerper-analyse" class="card card-link">
             <div class="card__text">
                 <h4>Fuß- und <br>Körperanalyse</h4>
                 <p>Erfassung und Korrektur von körperlichen Fehlstellungen im Body-Check-Center.</p>
@@ -78,8 +78,8 @@ permalink: /orthopaedie-schuhtechnik
                 </ul>
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
-        </div>
-        <div class="card card-link">
+        </a>
+        <a href="/orthopaedie-schuhtechnik/diabetische-fussversorgung" class="card card-link">
             <div class="card__text">
                 <h4>Diabetische <br>Fußversorgung</h4>
                 <ul class="card__list text__list">
@@ -90,28 +90,28 @@ permalink: /orthopaedie-schuhtechnik
                 </ul>
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
-        </div>
-        <div class="card card-link">
+        </a>
+        <a href="/orthopaedie-schuhtechnik/3-sohlen-konzept" class="card card-link">
             <div class="card__text">
                 <h4>3-Sohlen-Konzept</h4>
                 <p>Mit dem 3-Sohlen-Konzept wollen wir den verschiedenen Ansprüchen an Schuhe mit unterschiedlichen Schuhkonzepten gerecht werden.</p>
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
-        </div>
-        <div class="card card-link">
+        </a>
+        <a href="/orthopaedie-schuhtechnik/arbeitssicherheitsschuhe" class="card card-link">
             <div class="card__text">
                 <h4>Arbeits-<br>Sicherheitsschuhe</h4>
                 <p>Um Versicherungsschutz zu gewährleisten, müssen Einlagen für Arbeitssicherheitsschuhe nach der BGR 191 erstellt werden und der Baumusterprüfung des Schuhes entsprechen.</p>
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
-        </div>
-        <div class="card card-link">
+        </a>
+        <a href="/orthopaedie-schuhtechnik/schuhzurichtung" class="card card-link">
             <div class="card__text">
                 <h4>Schuhzurichtung</h4>
                 <p>Auf besonderen Wunsch schneiden wir beim alten Schuh die Schuhsohle auf und setzten die Korrektur dazwischen, falls der Schuh dafür geeignet ist.</p>
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
-        </div>
+        </a>
         <div class="card">
             <div class="card__text">
                 <h4>Reparaturarbeiten</h4>
