--- a/pages/index.html
+++ b/pages/index.html
@@ -24,8 +24,14 @@ permalink: /
 	    <h1>Walter Borchard</h1>
 	    <p>Orthopädie-Schuhtechnik und Sanitätshaus 
 	    <br>Region Rhein-Lahn/Süd-Westerwald</p>
-	    <button class="btn btn--standard">Rufen Sie uns an</button>
-	    <button class="btn btn--ghost">Schreiben Sie uns</button>
+	    <a href="#phone-number" class="btn btn--standard">
+            <img class="btn__icon" src="/assets/phone.svg">
+            Rufen Sie uns an
+        </a>
+	    <a href="mailto:borchard-orthopaedie@t-online.de?subject=Kontaktanfrage" class="btn btn--ghost">
+            <img class="btn__icon" src="/assets/mail.svg">
+            Schreiben Sie uns
+        </a>
 	  </div>
 	</div>
 </header>
@@ -43,14 +49,26 @@ permalink: /
         <h2>Orthopädie-Schuhtechnik</h2>
         <table class="overview">
             <tr>
-                <td class="overview__service">Orthopädische Maßschuhe</td>
-                <td class="overview__service">Diabetische Fußversorgung</td>
-                <td class="overview__service">Fuß- und Körperanalyse</td>
+                <td class="overview__service">
+                    <a href="/orthopaedie-schuhtechnik/orthopaedische-massschuhe">Orthopädische Maßschuhe</a>
+                </td>
+                <td class="overview__service">
+                    <a href="/orthopaedie-schuhtechnik/diabetische-fussversorgung">Diabetische Fußversorgung</a>
+                </td>
+                <td class="overview__service">
+                    <a href="/orthopaedie-schuhtechnik/fuss-und-koerper-analyse">Fuß- und Körperanalyse</a>
+                </td>
             </tr>
             <tr>
-                <td class="overview__service">Einlagentechnik</td>
-                <td class="overview__service">3-Sohlen-Konzept</td>
-                <td class="overview__service">Arbeitssicherheitsschuhe</td>
+                <td class="overview__service">
+                    <a href="/orthopaedie-schuhtechnik/einlagentechnik">Einlagentechnik</a>
+                </td>
+                <td class="overview__service">
+                    <a href="/orthopaedie-schuhtechnik/3-sohlen-konzept">3-Sohlen-Konzept</a>
+                </td>
+                <td class="overview__service">
+                    <a href="/orthopaedie-schuhtechnik/arbeitssicherheitsschuhe">Arbeitssicherheitsschuhe</a>
+                </td>
             </tr>
         </table>
     </div>
@@ -58,20 +76,32 @@ permalink: /
         <h2>Sanitätshaus</h2>
 		<table class="overview">
             <tr>
-                <td class="overview__service">Kompressionsstrümpfe</td>
-                <td class="overview__service">Bandage</td>
-                <td class="overview__service">Orthopädische Gehhilfen</td>
+                <td class="overview__service">
+                    <a href="/sanitaetshaus/kompressionsstruempfe">Kompressionsstrümpfe</a>
+                </td>
+                <td class="overview__service">
+                    <a href="/sanitaetshaus/bandagen">Bandagen</a>
+                </td>
+                <td class="overview__service">
+                    <a href="/sanitaetshaus/">Orthopädische Gehhilfen</a>
+                </td>
             </tr>
             <tr>
-                <td class="overview__service">Orthesen</td>
-                <td class="overview__service">Alltagshilfen</td>
-                <td class="overview__service">Sani-Fit-Shop</td>
+                <td class="overview__service">
+                    <a href="/sanitaetshaus/orthesen">Orthesen</a>
+                </td>
+                <td class="overview__service">
+                    <a href="/sanitaetshaus/">Alltagshilfen</a>
+                </td>
+                <td class="overview__service">
+                    <a href="/sanitaetshaus/">Sani-Fit-Shop</a>
+                </td>
             </tr>
         </table>
     </div>
     <div class="section">
     	<h2>Aktuelles</h2>
-    	<img src="assets/offer.jpg" alt="Angebot" class="offer">
+    	<img src="assets/offer.png" alt="Angebot" class="offer">
     </div>
     <div class="brand-banner section">
     	<div class="brands">
