--- a/pages/Sanitaetshaus/bandagen.html
+++ b/pages/Sanitaetshaus/bandagen.html
@@ -87,7 +87,7 @@ permalink: /sanitaetshaus/bandagen
                 <p>Vor Ort können Sie die Produkte selber anprobieren und sich von unseren freundlichen und kompetenten Mitarbeiterinnen beraten lassen.</p>
                 <p>Außerdem empfehlen wir, vom Arzt/Facharzt eine gezielte Diagnose erstellen zu lassen.</p>
             </div>
-            <img class="text__image text__image--float" id="bauerfeind-plakat" src="/assets/bauerfeind-anatomie.png" alt="Bauerfeind Bandagen">
+            <a href="/assets/bauerfeind-anatomie.png" target="_blank"><img class="text__image text__image--float" id="bauerfeind-plakat" src="/assets/bauerfeind-anatomie.png" alt="Bauerfeind Bandagen"></a>
         </div>
 
 
