--- a/pages/regionale-versorgung.html
+++ b/pages/regionale-versorgung.html
@@ -263,6 +263,7 @@ permalink: /regionale-versorgung
                 </td>
                 <td class="institution__data">
                     <div class="institution__adress">Paracelsiusklinik</div>
+                    <div class="institution__adress">(Sprechstunde nach Vereinbarung)</div>
                 </td>
             </tr>
 
