--- a/pages/404.html
+++ b/pages/404.html
@@ -22,6 +22,7 @@ permalink: /404.html
     </div>
 </nav>
 <main>
+    <!--hihi-->
     <div class="error-message">
         <div class="error-message">
             <h1>404</h1>
