--- a/pages/404.html
+++ b/pages/404.html
@@ -13,14 +13,25 @@ permalink: /404.html
   }
 </style>
 
-<nav>
-    <a href="/"><h1>Johannes Borchard</h1></a>
-    <div class="menu-item-group">
-        <a href="/" class="menu-item">Arbeit</a>
-        <a href="/about" class="menu-item">Person</a>
-        <a href="/contact" class="menu-item">Kontakt</a>
+<header class="header header--simple">
+    <nav class="header__nav-bar">
+        <a href="/" class="nav__logo">
+            <img class="nav__logo-img" src="/assets/logo-simple.png" alt="Logo">
+            <span class="nav__logo-name">Walter Borchard</span>
+        </a>
+        <img src="/assets/menu-toggle.svg" class="menu-toggle">
+        <div class="nav__menu">
+            <a href="/" class="nav__menu-item">Start</a>
+            <a href="/orthopaedie-schuhtechnik" class="nav__menu-item">Orthopädie-Schuhtechnik</a>
+            <a href="/sanitaetshaus" class="nav__menu-item">Sanitätshaus</a>
+            <a href="/firma" class="nav__menu-item">Firma</a>
+            <a href="/regionale-versorgung" class="nav__menu-item">Regionale Versorgung</a>
+        </div>
+    </nav>
+    <div>
+        <h1>Unterseite</h1>
     </div>
-</nav>
+</header>
 <main>
     <!--hihi-->
     <div class="error-message">
