--- a/pages/orthopaedie-schuhtechnik.html
+++ b/pages/orthopaedie-schuhtechnik.html
@@ -10,6 +10,7 @@ permalink: /orthopaedie-schuhtechnik
             <img class="nav__logo-img" src="/assets/logo-simple.png" alt="Logo">
             <span class="nav__logo-name">Walter Borchard</span>
         </a>
+        <img src="/assets/menu-toggle.svg" class="menu-toggle">
         <div class="nav__menu">
             <a href="/" class="nav__menu-item">Start</a>
             <a href="/orthopaedie-schuhtechnik" class="nav__menu-item nav__menu-item--active">Orthopädie-Schuhtechnik</a>
@@ -33,12 +34,14 @@ permalink: /orthopaedie-schuhtechnik
         </p>
         <p>Wir freuen uns auf Ihren Besuch!</p>
     </div>
+
     <div class="section">
-    <div class="text">
+        <div class="text">
         <h2>Leistungen</h2>
-        <p>Service verstehen wir als Dienst am Kunden und bieten neben persönlicher fachlicher Bedienung und Beratung Hausbesuche auf Absprache und akute Versorgung an. Mit unserer Kundenkarte erhalten Sie drei Prozent Rabatt auf alle Schuhe. Außerdem akzeptieren wir die Lahnstein-Card. Wir bieten Einlagen- und Schuhkontrolle und unsere Meisterwerkstatt befindet sich direkt im Haus.
-        </p>
+        <p>Service verstehen wir als Dienst am Kunden und bieten neben persönlicher fachlicher Bedienung und Beratung Hausbesuche auf Absprache und akute Versorgung an. Mit unserer Kundenkarte erhalten Sie drei Prozent Rabatt auf alle Schuhe. Außerdem akzeptieren wir die Lahnstein-Card. Wir bieten Einlagen- und Schuhkontrolle und unsere Meisterwerkstatt befindet sich direkt im Haus. </p>
     </div>
+    </div>
+
     <div class="service-cards section__element">
         <a href="/orthopaedie-schuhtechnik/orthopaedische-massschuhe" class="card card-link">
             <div class="card__text">
@@ -119,14 +122,16 @@ permalink: /orthopaedie-schuhtechnik
             </div>
         </div>
     </div>
-    </div>
+
+
+
     <div class="section">
-    <div class="text">
-        <h2>Schmerzen</h2>
-        <p>Für Sie als Kunde ist es wichtig zu erfahren, was gegen Ihre Schmerzen konkret hilft. Darum gehen wir auf verschiedene Schmerzbereiche ein und stellen eine Auswahl an therapeutischen Möglichkeiten zur Behandlung vor.</p>
-        <p>Grundsätzlich gilt bei jeder Maßnahme, dass eine klare Diagnose hilft, die richtige Behandlung zu finden. Darum ist es wichtig, erst zum Arzt/Facharzt zu gehen um eine gezielte Diagnose zu erstellen.</p>
-    </div>
-    <div class="section__element">
+        <div class="text">
+            <h2>Schmerzen</h2>
+            <p>Für Sie als Kunde ist es wichtig zu erfahren, was gegen Ihre Schmerzen konkret hilft. Darum gehen wir auf verschiedene Schmerzbereiche ein und stellen eine Auswahl an therapeutischen Möglichkeiten zur Behandlung vor.</p>
+            <p>Grundsätzlich gilt bei jeder Maßnahme, dass eine klare Diagnose hilft, die richtige Behandlung zu finden. Darum ist es wichtig, erst zum Arzt/Facharzt zu gehen um eine gezielte Diagnose zu erstellen.</p>
+        </div>
+        <div class="section__element">
         <table class="pain last-element">
             <tr>
                 <td>
@@ -218,6 +223,6 @@ permalink: /orthopaedie-schuhtechnik
                 </td>
             </tr>
         </table>
-    </div>
+        </div>
     </div>
 </main>
