--- a/pages/index.html
+++ b/pages/index.html
@@ -11,6 +11,7 @@ permalink: /
             <img class="nav__logo-img" src="/assets/logo-simple.png" alt="Logo">
             <span class="nav__logo-name">Walter Borchard</span>
         </a>
+        <img src="/assets/menu-toggle.svg" class="menu-toggle">
 	    <div class="nav__menu">
 	        <a href="/" class="nav__menu-item nav__menu-item--active">Start</a>
 	        <a href="/orthopaedie-schuhtechnik" class="nav__menu-item">Orthopädie-Schuhtechnik</a>
@@ -18,6 +19,7 @@ permalink: /
 	        <a href="/firma" class="nav__menu-item">Firma</a>
 	        <a href="/regionale-versorgung" class="nav__menu-item">Regionale Versorgung</a>
 	    </div>
+
 	</nav>
 	<div class="header__image header__image--left header__image--home">
 	  <div class="header__text">
@@ -112,3 +114,4 @@ permalink: /
     	</div>
     </div>
 </main>
+
