--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@ permalink: /
 
 	</nav>
 	<div class="header__image header__image--left header__image--home">
-	  <div class="header__text">
+	  <div class="header__text header__text--left">
 	    <h1>Walter Borchard</h1>
 	    <p>Orthopädie-Schuhtechnik und Sanitätshaus 
 	    <br>Region Rhein-Lahn/Süd-Westerwald</p>
