Padding/Margin Korrektur in responsiver Tabelle

--- a/pages/regionale-versorgung.html
+++ b/pages/regionale-versorgung.html
@@ -409,7 +409,7 @@ permalink: /regionale-versorgung
     </div>
 
     <div class="section institution-container">
-        <h3>Region Augst</h3>
+        <h3>Region Augst Region Taunus und Rhein-Schiene</h3>
         <table class="institution-table">
             
             <tr class="institution">
