--- a/pages/Orthopaedie-Schuhtechnik/einlagentechnik.html
+++ b/pages/Orthopaedie-Schuhtechnik/einlagentechnik.html
@@ -10,6 +10,7 @@ permalink: /orthopaedie-schuhtechnik/einlagentechnik
             <img class="nav__logo-img" src="/assets/logo-simple.png" alt="Logo">
             <span class="nav__logo-name">Walter Borchard</span>
         </a>
+        <img src="/assets/menu-toggle.svg" class="menu-toggle">
         <div class="nav__menu">
             <a href="/" class="nav__menu-item">Start</a>
             <a href="/orthopaedie-schuhtechnik" class="nav__menu-item nav__menu-item--active">Orthopädie-Schuhtechnik</a>
