--- a/pages/firma.html
+++ b/pages/firma.html
@@ -35,7 +35,8 @@ permalink: /firma
     <div class="section">
         <h2>Geschichte</h2>
         <div class="section__element">
-            <img src="/assets/timeline.svg" alt="Zeitleiste">
+            <img id="timeline-desktop" src="/assets/timeline.svg" alt="Zeitleiste">
+            <img id="timeline-mobil" src="/assets/timeline-mobil.svg" alt="Zeitleiste">
         </div>
 
         <div class="section__element last-element">
