Bauerfeind App Links

--- a/pages/Sanitaetshaus/orthesen.html
+++ b/pages/Sanitaetshaus/orthesen.html
@@ -86,6 +86,7 @@ permalink: /sanitaetshaus/orthesen
         <p>Vor Ort können Sie die Produkte selber anprobieren und sich von unseren freundlichen und kompetenten Mitarbeiterinnen beraten lassen.</p>
         <p>Außerdem empfehlen wir, vom Arzt/Facharzt eine gezielte Diagnose erstellen zu lassen.</p>
         </div>
+        </p>Für hilfreiche Übungen verweisen wir auf die  <a href="https://app.bauerfeind.de/" target=_blank>Therapie-App von Bauerfeind</a>.<p>
         </div>
 
         </div>
