Header Text Align Fix

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@ permalink: /
 	</nav>
 	<div class="header__image header__image--left header__image--home">
 	  <div class="header__text header__text--left">
-	    <h1>Walter Borchard</h1>
+	    <h1 class="header__text--left">Walter Borchard</h1>
 	    <p>Orthopädie-Schuhtechnik und Sanitätshaus 
 	    <br>Region Rhein-Lahn/Süd-Westerwald</p>
 	    <a href="#phone-number" class="btn btn--standard">
