--- a/pages/regionale-versorgung.html
+++ b/pages/regionale-versorgung.html
@@ -145,7 +145,7 @@ permalink: /regionale-versorgung
 
             <tr class="institution">
                 <td class="institution__data">
-                    <div class="institution__type">Hausarzt</div>
+                    <div class="institution__type">Hausärztin</div>
                     <div class="institution__people">Dr. Kremer-König</div>
                 </td>
                 <td class="institution__data">
