Mobile Menu Accessibility

--- a/pages/Orthopaedie-Schuhtechnik/3-sohlen-konzept.html
+++ b/pages/Orthopaedie-Schuhtechnik/3-sohlen-konzept.html
@@ -10,7 +10,10 @@ permalink: /orthopaedie-schuhtechnik/3-sohlen-konzept
             <img class="nav__logo-img" src="/assets/logo-simple.png" alt="Logo">
             <span class="nav__logo-name">Walter Borchard</span>
         </a>
-        <img src="/assets/menu-toggle.svg" class="menu-toggle">
+        <div class="menu-toggle">
+            <span>Menü</span>
+            <img src="/assets/menu-toggle.svg">
+        </div>
         <div class="nav__menu">
             <a href="/" class="nav__menu-item">Start</a>
             <a href="/orthopaedie-schuhtechnik" class="nav__menu-item nav__menu-item--active">Orthopädie-Schuhtechnik</a>
