--- a/pages/404.html
+++ b/pages/404.html
@@ -11,6 +11,10 @@ permalink: /404.html
     line-height: 1;
     letter-spacing: -1px;
   }
+
+  .error-message {
+    margin-bottom: 80px;
+  }
 </style>
 
 <header class="header header--simple">
@@ -25,23 +29,22 @@ permalink: /404.html
         </div>
         <div class="nav__menu">
             <a href="/" class="nav__menu-item">Start</a>
-            <a href="/orthopaedie-schuhtechnik" class="nav__menu-item">Orthopädie-Schuhtechnik</a>
+            <a href="/orthopaedie-schuhtechnik" class="nav__menu-item ">Orthopädie-Schuhtechnik</a>
             <a href="/sanitaetshaus" class="nav__menu-item">Sanitätshaus</a>
             <a href="/firma" class="nav__menu-item">Firma</a>
             <a href="/regionale-versorgung" class="nav__menu-item">Regionale Versorgung</a>
         </div>
     </nav>
     <div>
-        <h1>Unterseite</h1>
+        <h1>Seite nicht gefunden</h1>
     </div>
 </header>
 <main>
     <!--hihi-->
     <div class="error-message">
         <div class="error-message">
-            <h1>404</h1>
-            <p><strong>Page not found :(</strong></p>
-            <p>The requested page could not be found.</p>
+            <p>Der Link war fehlerhaft oder die gesuchte Seite exisitiert nicht mehr. 
+            </br>Benutzen Sie das Menü um danach zu suchen oder melden Sie sich bei uns, wenn Sie etwas vermissen.</p>
         </div>
     </div>
 </main>
