--- a/pages/index.html
+++ b/pages/index.html
@@ -106,7 +106,7 @@ permalink: /
     </div>
     <div class="section">
     	<h2>Aktuelles</h2>
-    	<img src="assets/offer.png" alt="Angebot" class="offer">
+    	<img src="assets/offer-winter.png" alt="Angebot" class="offer">
     </div>
     <div class="brand-banner section">
     	<div class="brands">
