--- a/pages/index.html
+++ b/pages/index.html
@@ -107,6 +107,7 @@ permalink: /
     <div class="section">
     	<h2>Aktuelles</h2>
     	<img src="assets/offer-winter.png" alt="Angebot" class="offer">
+        <img src="assets/offer-winter-mobile.png" alt="Angebot" class="offer-mobile">
     </div>
     <div class="brand-banner section">
     	<div class="brands">
