--- a/pages/index.html
+++ b/pages/index.html
@@ -106,8 +106,8 @@ permalink: /
     </div>
     <div class="section">
     	<h2>Aktuelles</h2>
-    	<img src="assets/offer-winter.png" alt="Angebot" class="offer">
-        <img src="assets/offer-winter-mobile.png" alt="Angebot" class="offer-mobile">
+    	<img src="assets/offer-spring.png" alt="Angebot" class="offer">
+        <img src="assets/offer-spring-mobile.png" alt="Angebot" class="offer-mobile">
     </div>
     <div class="brand-banner section">
     	<div class="brands">
