--- a/pages/Sanitaetshaus/bandagen.html
+++ b/pages/Sanitaetshaus/bandagen.html
@@ -12,7 +12,7 @@ permalink: /sanitaetshaus/bandagen
         </a>
         <div class="menu-toggle">
             <span>Menü</span>
-            <img src="/assets/menu-toggle.svg">
+            <img src="/assets/menu-toggle.svg" alt="menü">
         </div>
         <div class="nav__menu">
             <a href="/" class="nav__menu-item">Start</a>
