--- a/pages/orthopaedie-schuhtechnik.html
+++ b/pages/orthopaedie-schuhtechnik.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Orthopädie-Schuhtechnik
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie Orthopädische Maßschuhe, diabetische Fußversorgung und Einlagen."
 permalink: /orthopaedie-schuhtechnik
 ---
 <header class="header header--hero">
@@ -12,7 +12,7 @@ permalink: /orthopaedie-schuhtechnik
         </a>
         <div class="menu-toggle">
             <span>Menü</span>
-            <img src="/assets/menu-toggle.svg">
+            <img src="/assets/menu-toggle.svg" alt="menü">
         </div>
         <div class="nav__menu">
             <a href="/" class="nav__menu-item">Start</a>
