--- a/pages/404.html
+++ b/pages/404.html
@@ -25,7 +25,7 @@ permalink: /404.html
         </a>
         <div class="menu-toggle">
             <span>Menü</span>
-            <img src="/assets/menu-toggle.svg">
+            <img src="/assets/menu-toggle.svg" alt="menü">
         </div>
         <div class="nav__menu">
             <a href="/" class="nav__menu-item">Start</a>
