--- a/pages/firma.html
+++ b/pages/firma.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Firma
-description: 
+description: "Unser Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein blickt auf eine lange Firmengeschichte und Familientradition zurück."
 permalink: /firma
 ---
 <header class="header header--hero">
@@ -12,7 +12,7 @@ permalink: /firma
         </a>
         <div class="menu-toggle">
             <span>Menü</span>
-            <img src="/assets/menu-toggle.svg">
+            <img src="/assets/menu-toggle.svg" alt="menü">
         </div>
         <div class="nav__menu">
             <a href="/" class="nav__menu-item">Start</a>
