--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: Walter Borchard
-description: 
+title: Walter Borchard | Orthopädie-Schuhtechnik und Sanitätshaus in Lahnstein
+description: "Orthopädie-Schuhtechnik und Sanitätshaus in Lahnstein für die Region Rhein-Lahn/Süd-Westerwald  und Koblenz. Unsere Betriebsstruktur der kurzen Wege ermöglicht es uns, schnell und 
+kompetent auf Ihre besonderen Wünsche einzugehen."
 permalink: /
 ---
 
@@ -13,7 +14,7 @@ permalink: /
         </a>
         <div class="menu-toggle">
             <span>Menü</span>
-            <img src="/assets/menu-toggle.svg">
+            <img src="/assets/menu-toggle.svg" alt="menü">
         </div>
 	    <div class="nav__menu">
 	        <a href="/" class="nav__menu-item nav__menu-item--active">Start</a>
@@ -30,11 +31,11 @@ permalink: /
 	    <p>Orthopädie-Schuhtechnik und Sanitätshaus 
 	    <br>Region Rhein-Lahn/Süd-Westerwald</p>
 	    <a href="#phone-number" class="btn btn--standard">
-            <img class="btn__icon" src="/assets/phone.svg">
+            <img class="btn__icon" src="/assets/phone.svg" alt="telefon">
             Rufen Sie uns an
         </a>
 	    <a href="mailto:borchard-orthopaedie@t-online.de?subject=Kontaktanfrage" class="btn btn--ghost">
-            <img class="btn__icon" src="/assets/mail.svg">
+            <img class="btn__icon" src="/assets/mail.svg" alt="mail">
             Schreiben Sie uns
         </a>
 	  </div>
