--- a/pages/regionale-versorgung.html
+++ b/pages/regionale-versorgung.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Regionale Versorgung
-description: 
+description: "Eine Übersicht des Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein über ärztliche Versorgung in der Region Rhein-Lahn/Süd-Westerwald."
 permalink: /regionale-versorgung
 ---
 <header class="header header--hero">
@@ -12,7 +12,7 @@ permalink: /regionale-versorgung
         </a>
         <div class="menu-toggle">
             <span>Menü</span>
-            <img src="/assets/menu-toggle.svg">
+            <img src="/assets/menu-toggle.svg" alt="menü">
         </div>
         <div class="nav__menu">
             <a href="/" class="nav__menu-item">Start</a>
