--- a/pages/sanitaetshaus.html
+++ b/pages/sanitaetshaus.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Sanitätshaus
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an Sanitätsartikeln wie Kompressionsstrümpfe, Bandagen und Orthesen."
 permalink: /sanitaetshaus
 ---
 <header class="header header--hero">
@@ -12,7 +12,7 @@ permalink: /sanitaetshaus
         </a>
         <div class="menu-toggle">
             <span>Menü</span>
-            <img src="/assets/menu-toggle.svg">
+            <img src="/assets/menu-toggle.svg" alt="menü">
         </div>
         <div class="nav__menu">
             <a href="/" class="nav__menu-item">Start</a>
