SEO auf Unterseiten

--- a/pages/Orthopaedie-Schuhtechnik/3-sohlen-konzept.html
+++ b/pages/Orthopaedie-Schuhtechnik/3-sohlen-konzept.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | 3-Sohlen-Konzept
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie unser 3-Sohlen-Konzept."
 permalink: /orthopaedie-schuhtechnik/3-sohlen-konzept
 ---
 <header class="header header--simple">
