--- a/pages/Orthopaedie-Schuhtechnik/arbeitssicherheitsschuhe.html
+++ b/pages/Orthopaedie-Schuhtechnik/arbeitssicherheitsschuhe.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Arbeitssicherheitsschuhe
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie Arbeitssicherheitsschuhe."
 permalink: /orthopaedie-schuhtechnik/arbeitssicherheitsschuhe
 ---
 <header class="header header--simple">
