--- a/pages/Orthopaedie-Schuhtechnik/fuss-und-koerper-analyse.html
+++ b/pages/Orthopaedie-Schuhtechnik/fuss-und-koerper-analyse.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Einlagentechnik
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie Fuß- und Körperanalyse."
 permalink: /orthopaedie-schuhtechnik/fuss-und-koerper-analyse
 ---
 <header class="header header--simple">
