--- a/pages/Orthopaedie-Schuhtechnik/orthopaedische-massschuhe.html
+++ b/pages/Orthopaedie-Schuhtechnik/orthopaedische-massschuhe.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Orthopädische Maßschuhe
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie orthopädische Maßschuhe."
 permalink: /orthopaedie-schuhtechnik/orthopaedische-massschuhe
 ---
 <header class="header header--simple">
