--- a/pages/Sanitaetshaus/kompressionsstruempfe.html
+++ b/pages/Sanitaetshaus/kompressionsstruempfe.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Kompressionsstrümpfe
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an Sanitätsartikeln wie Kompressionsstrümpfe."
 permalink: /sanitaetshaus/kompressionsstruempfe
 ---
 <header class="header header--simple">
