--- a/pages/Orthopaedie-Schuhtechnik/diabetische-fussversorgung.html
+++ b/pages/Orthopaedie-Schuhtechnik/diabetische-fussversorgung.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Diabetische Fußversorgung
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie diabetische Fußversorgung."
 permalink: /orthopaedie-schuhtechnik/diabetische-fussversorgung
 ---
 <header class="header header--simple">
