--- a/pages/Orthopaedie-Schuhtechnik/schuhzurichtung.html
+++ b/pages/Orthopaedie-Schuhtechnik/schuhzurichtung.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Schuhzurichtung
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie Schuhzurichtung."
 permalink: /orthopaedie-schuhtechnik/schuhzurichtung
 ---
 <header class="header header--simple">
