--- a/pages/Sanitaetshaus/bandagen.html
+++ b/pages/Sanitaetshaus/bandagen.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Bandagen
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an Sanitätsartikeln wie Bandagen."
 permalink: /sanitaetshaus/bandagen
 ---
 <header class="header header--hero">
