--- a/pages/Sanitaetshaus/orthesen.html
+++ b/pages/Sanitaetshaus/orthesen.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Orthesen
-description: 
+description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an Sanitätsartikeln wie Orthesen."
 permalink: /sanitaetshaus/orthesen
 ---
 <header class="header header--hero">
