Index Description verkürzt

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 title: Walter Borchard | Orthopädie-Schuhtechnik–Sanitätshaus in Lahnstein
-description: "Orthopädie-Schuhtechnik und Sanitätshaus in Lahnstein für die Region Rhein-Lahn/Süd-Westerwald  und Koblenz. Unsere Betriebsstruktur der kurzen Wege ermöglicht es uns, schnell und 
-kompetent auf Ihre besonderen Wünsche einzugehen."
+description: "Orthopädie-Schuhtechnik und Sanitätshaus in Lahnstein für die Region Rhein-Lahn/Süd-Westerwald  und Koblenz."
 permalink: /
 ---
 
