--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Walter Borchard | Orthopädie-Schuhtechnik–Sanitätshaus in Lahnstein
+title: Walter Borchard | Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein
 description: "Orthopädie-Schuhtechnik und Sanitätshaus in Lahnstein für die Region Rhein-Lahn/Süd-Westerwald  und Koblenz."
 permalink: /
 ---
