--- a/pages/Orthopaedie-Schuhtechnik/3-sohlen-konzept.html
+++ b/pages/Orthopaedie-Schuhtechnik/3-sohlen-konzept.html
@@ -29,7 +29,7 @@ permalink: /orthopaedie-schuhtechnik/3-sohlen-konzept
 
 <main>
     <div class="text">
-        <p>Wie die Menschen verschieden sind, so sind die Ansprüche an die Schuhe entsprechend den Anfordernissen unterschiedlich. Mit dem 3-Sohlen-Konzept wollen wir diesen Ansprüchen mit unterschiedlichen Schuhkonzepten gerecht werden. Zum einen den Fußbettschuh von Finn Comfort, der Schuh für lose Einlagen mit und ohne Gelenkrolle. Die Waldläufer Schuhe mit dem bequemen Laufcomfort in unterschiedlichen Breiten sowie den Varomed, der perfekte Spezialschuh, der Problemlöser in verschiedenen Ausführungen.</p>
+        <p>Wie die Menschen verschieden sind, so sind auch ihre Ansprüche an die Schuhe unterschiedlich. Mit dem 3-Sohlen-Konzept wollen wir diesen Ansprüchen mit unterschiedlichen Schuhkonzepten gerecht werden. Zum einen den Fußbettschuh von Finn Comfort, der Schuh für lose Einlagen mit und ohne Gelenkrolle. Die Waldläufer Schuhe mit dem bequemen Laufcomfort in unterschiedlichen Breiten sowie den Varomed, der perfekte Spezialschuh, der Problemlöser in verschiedenen Ausführungen.</p>
 
         <div class="text__element-row text__element-row--center">
             <img class="text__image text__image--small" src="/assets/brands/finncomfort.jpg" alt="Beipsielbild">
