--- a/pages/Orthopaedie-Schuhtechnik/arbeitssicherheitsschuhe.html
+++ b/pages/Orthopaedie-Schuhtechnik/arbeitssicherheitsschuhe.html
@@ -23,7 +23,7 @@ permalink: /orthopaedie-schuhtechnik/arbeitssicherheitsschuhe
         </div>
     </nav>
     <div>
-        <h1>Arbeitssicherheitsschuhe</h1>
+        <h1>Arbeits&shy;sicherheitsschuhe</h1>
     </div>
 </header>
 
