--- a/pages/Orthopaedie-Schuhtechnik/einlagentechnik.html
+++ b/pages/Orthopaedie-Schuhtechnik/einlagentechnik.html
@@ -23,7 +23,7 @@ permalink: /orthopaedie-schuhtechnik/einlagentechnik
         </div>
     </nav>
     <div>
-        <h1>Einlagentechnik</h1>
+        <h1>Einlagen&shy;technik</h1>
     </div>
 </header>
 
