--- a/pages/Orthopaedie-Schuhtechnik/schuhzurichtung.html
+++ b/pages/Orthopaedie-Schuhtechnik/schuhzurichtung.html
@@ -23,7 +23,7 @@ permalink: /orthopaedie-schuhtechnik/schuhzurichtung
         </div>
     </nav>
     <div>
-        <h1>Schuhzurichtung</h1>
+        <h1>Schuh&shy;zurichtung</h1>
     </div>
 </header>
 
