Fix für kleine Bildschirme und Vorbereitungen für Brand Slider

--- a/pages/Sanitaetshaus/kompressionsstruempfe.html
+++ b/pages/Sanitaetshaus/kompressionsstruempfe.html
@@ -23,7 +23,7 @@ permalink: /sanitaetshaus/kompressionsstruempfe
         </div>
     </nav>
     <div>
-        <h1>Kompressions&shy;strümpfe</h1>
+        <h1>Kompres&shy;sions&shy;strümpfe</h1>
     </div>
 </header>
 <main>
