--- a/pages/index.html
+++ b/pages/index.html
@@ -110,12 +110,15 @@ permalink: /
         <img src="assets/offer-spring-mobile.png" alt="Angebot" class="offer-mobile">
     </div>
     <div class="brand-banner section">
-    	<div class="brands">
-        	<img src="assets/brands/Bauerfeind.png" alt="Bauerfeind" class="brands__icon">
-        	<img src="assets/brands/Waldlaeufer.png" alt="Waldläufer" class="brands__icon">
-        	<img src="assets/brands/Egroh.png" alt="EGROH" class="brands__icon">
-        	<img src="assets/brands/Varomed.png" alt="Varomed" class="brands__icon brands__icon--small">
+    	<div class="brands customer-logos slider">
+        	<img src="assets/brands/Bauerfeind.png" alt="Bauerfeind" class="brands__icon slide">
+        	<img src="assets/brands/Waldlaeufer.png" alt="Waldläufer" class="brands__icon slide">
+        	<img src="assets/brands/Egroh.png" alt="EGROH" class="brands__icon slide">
+        	<img src="assets/brands/Varomed.png" alt="Varomed" class="brands__icon brands__icon--small slide">
     	</div>
     </div>
 </main>
+
+
+
 
