--- a/pages/index.html
+++ b/pages/index.html
@@ -109,16 +109,55 @@ permalink: /
     	<img src="assets/offer-spring.png" alt="Angebot" class="offer">
         <img src="assets/offer-spring-mobile.png" alt="Angebot" class="offer-mobile">
     </div>
+
     <div class="brand-banner section">
     	<div class="brands customer-logos slider">
         	<img src="assets/brands/Bauerfeind.png" alt="Bauerfeind" class="brands__icon slide">
         	<img src="assets/brands/Waldlaeufer.png" alt="Waldläufer" class="brands__icon slide">
         	<img src="assets/brands/Egroh.png" alt="EGROH" class="brands__icon slide">
         	<img src="assets/brands/Varomed.png" alt="Varomed" class="brands__icon brands__icon--small slide">
+            <img src="assets/brands/Bauerfeind.png" alt="Jobst" class="brands__icon slide">
+            <img src="assets/brands/jobst.svg" alt="Bauerfeind" class="brands__icon slide">
+            <img src="assets/brands/medi.svg" alt="Medi" class="brands__icon brands__icon--square slide">
+            <img src="assets/brands/schiebler.png" alt="Schiebler" class="brands__icon slide">
+            <img src="assets/brands/schein.jpg" alt="Schein" class="brands__icon slide">
+            <img src="assets/brands/bort.svg" alt="Bort" class="brands__icon brands__icon--square slide">
+            <img src="assets/brands/sporlastic-large.jpg" alt="Sporlastic" class="brands__icon slide">
+            <img src="assets/brands/fidelio.jpg" alt="Fidelio" class="brands__icon slide">
     	</div>
     </div>
 </main>
 
+<script language="javascript">
+    $(document).ready(function(){
+    $('.customer-logos').slick({
+        slidesToShow: 4,
+        slidesToScroll: 1,
+        autoplay: true,
+        autoplaySpeed: 1500,
+        arrows: false,
+        dots: false,
+        pauseOnHover: true,
+        variableWidth: true,
+        
+        responsive: [{
+            breakpoint: 1024,
+            settings: {
+                slidesToShow: 3,
+                slidesToScroll: 3,
+                centerMode: true
+            }
+        }, {
+            breakpoint: 768,
+            settings: {
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                centerMode: true
+            }
+        }]
+    });
+});
+</script>
 
 
 
