--- a/pages/index.html
+++ b/pages/index.html
@@ -134,7 +134,8 @@ permalink: /
         slidesToShow: 4,
         slidesToScroll: 1,
         autoplay: true,
-        autoplaySpeed: 1500,
+        autoplaySpeed: 2000,
+        speed: 1000,
         arrows: false,
         dots: false,
         pauseOnHover: true,
@@ -143,6 +144,7 @@ permalink: /
         responsive: [{
             breakpoint: 1024,
             settings: {
+                swipeToSlide: true,
                 slidesToShow: 3,
                 slidesToScroll: 3,
                 centerMode: true
