--- a/pages/index.html
+++ b/pages/index.html
@@ -33,7 +33,7 @@ permalink: /
             <img class="btn__icon" src="/assets/phone.svg" alt="telefon">
             Rufen Sie uns an
         </a>
-	    <a href="mailto:borchard-orthopaedie@t-online.de?subject=Kontaktanfrage" class="btn btn--ghost">
+	    <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#098;&#111;&#114;&#099;&#104;&#097;&#114;&#100;&#045;&#111;&#114;&#116;&#104;&#111;&#112;&#097;&#101;&#100;&#105;&#101;&#064;&#116;&#045;&#111;&#110;&#108;&#105;&#110;&#101;&#046;&#100;&#101;?&#115;&#117;&#098;&#106;&#101;&#099;&#116;=&#075;&#111;&#110;&#116;&#097;&#107;&#116;&#097;&#110;&#102;&#114;&#097;&#103;&#101;" class="btn btn--ghost">
             <img class="btn__icon" src="/assets/mail.svg" alt="mail">
             Schreiben Sie uns
         </a>
