Orthesen Grafik und Link zur App

--- a/pages/Sanitaetshaus/bandagen.html
+++ b/pages/Sanitaetshaus/bandagen.html
@@ -90,7 +90,7 @@ permalink: /sanitaetshaus/bandagen
                 <p>Bei einer kurzfristigen Akutversorgung kann durchaus ein Basisprodukt ausreichend sein. Bei Dauerversorgung mit Bandagen sind Materialeigenschaften wie z.B. atmungsaktives Gestrick positiv, um die Hautverträglichkeit  zu gewährleisten.</p>
                 <p>Vor Ort können Sie die Produkte selber anprobieren und sich von unseren freundlichen und kompetenten Mitarbeiterinnen beraten lassen.</p>
                 <p>Außerdem empfehlen wir, vom Arzt/Facharzt eine gezielte Diagnose erstellen zu lassen.</p>
-                 <p>Für hilfreiche Übungen verweisen wir auf die  <a href="https://app.bauerfeind.de/" target=_blank>Therapie-App von Bauerfeind</a>.</p>
+                 <p>Für hilfreiche Übungen verweisen wir auf die  <a href="https://apps.bauerfeind.com/therapy/" target=_blank>Therapie-App von Bauerfeind</a>.</p>
             </div>
             <a href="/assets/bauerfeind-anatomie.png" target="_blank"><img class="text__image text__image--float" id="bauerfeind-plakat" src="/assets/bauerfeind-anatomie.png" alt="Bauerfeind Bandagen"></a>
         </div>
