--- a/pages/Sanitaetshaus/orthesen.html
+++ b/pages/Sanitaetshaus/orthesen.html
@@ -33,9 +33,8 @@ permalink: /sanitaetshaus/orthesen
     <div class="text">
         <p>Häufig werden die Begriffe Orthesen und Bandagen in einem Satz verwendet, doch worin liegen die Unterschiede?</p>
         <p>Die Aufgabe einer Orthese ist Funktionsersatz oder Funktionsunterstützung. Außerdem schützen und stützen sie den Bewegungsapparat. Als ärztlich verordnetes medizinisches Hilfsmittel fördern sie die Heilung von Verletzungen und Erkrankungen des Halte- und Bewegungsapparates. In der Kombination mit therapeutisch begleitenden Maßnahmen (z.B. Physiotherapie) beugen sie Fehlhaltungen und Fehlbelastungen vor.</p>
-    
 
-    <div class="service-cards section__element">
+        <div class="service-cards section__element">
             <div class="card">
                 <div class="card__text">
                     <h4>Sprunggelenk*</h4>
@@ -83,18 +82,20 @@ permalink: /sanitaetshaus/orthesen
                 * unterschiedliche Ausführung je nach Indikation
             </div>
         </div>
-        <div class="section__element">
-        <p>Basis-, Qualitäts- und Premiumprodukte unterscheiden sich ist in erster Linie in deren Material und Gestrick (z.B. 3D-Gestrick).</p>
-        <p>Grundsätzlich müssen Orthesen angepasst und eingestellt werden. Je nach Modell und Art ist eine Nachversorgung nach Angaben des behandelnden Arztes möglich oder notwendig. Zum einen gibt der Arzt das Modell vor zum anderen besteht die Möglichkeit Alternativprodukte auszuprobieren.</p>
-        <p>Vor Ort können Sie die Produkte selber anprobieren und sich von unseren freundlichen und kompetenten Mitarbeiterinnen beraten lassen.</p>
-        <p>Außerdem empfehlen wir, vom Arzt/Facharzt eine gezielte Diagnose erstellen zu lassen.</p>
-        </div>
-        </p>Für hilfreiche Übungen verweisen wir auf die  <a href="https://app.bauerfeind.de/" target=_blank>Therapie-App von Bauerfeind</a>.<p>
-        </div>
 
+        <div class="text__element-row section__element">
+            <div>
+                <p>Basis-, Qualitäts- und Premiumprodukte unterscheiden sich ist in erster Linie in deren Material und Gestrick (z.B. 3D-Gestrick).</p>
+                <p>Grundsätzlich müssen Orthesen angepasst und eingestellt werden. Je nach Modell und Art ist eine Nachversorgung nach Angaben des behandelnden Arztes möglich oder notwendig. Zum einen gibt der Arzt das Modell vor zum anderen besteht die Möglichkeit Alternativprodukte auszuprobieren.</p>
+                <p>Vor Ort können Sie die Produkte selber anprobieren und sich von unseren freundlichen und kompetenten Mitarbeiterinnen beraten lassen.</p>
+                <p>Außerdem empfehlen wir, vom Arzt/Facharzt eine gezielte Diagnose erstellen zu lassen.</p>
+                
+                </p>Für hilfreiche Übungen verweisen wir auf die  <a href="https://apps.bauerfeind.com/therapy/" target=_blank>Therapie-App von Bauerfeind</a>.<p>
+            </div>
+            <a href="/assets/bauerfeind-orthesen.jpg" target="_blank"><img class="text__image text__image--float" id="bauerfeind-plakat" src="/assets/bauerfeind-orthesen.jpg" alt="Bauerfeind Orthesen"></a>
         </div>
-
-        <div class="section last-element">
+    </div>
+    <div class="section last-element">
         <a href="/sanitaetshaus" class="btn btn--back">Zurück zu Sanitätshaus</a>
     </div>
 </main>
