Neue Header Bilder (unkomprimiert)

--- a/pages/Sanitaetshaus/bandagen.html
+++ b/pages/Sanitaetshaus/bandagen.html
@@ -22,7 +22,7 @@ permalink: /sanitaetshaus/bandagen
             <a href="/regionale-versorgung" class="nav__menu-item">Regionale Versorgung</a>
         </div>
     </nav>
-    <div class="header__image header__image--center header__image--sani">
+    <div class="header__image header__image--center header__image--bandagen">
       <div class="header__text">
         <h1>Bandagen</h1>
       </div>
@@ -33,7 +33,7 @@ permalink: /sanitaetshaus/bandagen
     <div class="text">
         <p>Die modernen aktiven Bandagen entfalten Ihre Wirkung am Besten bei körperlicher Bewegung. Die Stimulation von Propriozeptoren und die Massage-Kompressions-Wirkung des Gestricks regen die Durchblutung an und verbessern den Stoffwechsel. Das beschleunigt die Heilung.</p>
         <p>Ihre Aktivbandage tragen Sie daher am Besten, wen Sie sich viel bewegen. Bei Passivität – etwa abends vor dem Fernseher – ist dies in der Regel nicht notwendig, sofern nicht anders vom Arzt vorgegeben.</p>
-    
+
 
     <div class="service-cards section__element">
             <div class="card">
