neue Anzeige und fassadenbilder

--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,7 @@ permalink: /
 	<div class="header__image header__image--left header__image--home">
 	  <div class="header__text header__text--left">
 	    <h1 class="header__text--left">Walter Borchard</h1>
-	    <p>Orthopädie-Schuhtechnik und Sanitätshaus 
+	    <p>Orthopädie-Schuhtechnik und Sanitätshaus
 	    <br>Region Rhein-Lahn/Süd-Westerwald</p>
 	    <a href="#phone-number" class="btn btn--standard">
             <img class="btn__icon" src="/assets/phone.svg" alt="telefon">
@@ -106,8 +106,8 @@ permalink: /
     </div>
     <div class="section">
     	<h2>Aktuelles</h2>
-    	<img src="assets/offer-autumn-sale.png" alt="Angebot" class="offer">
-        <img src="assets/offer-autumn-mobile-sale.png" alt="Angebot" class="offer-mobile">
+    	<img src="assets/lager-abverkauf.png" alt="Angebot" class="offer">
+        <img src="assets/lager-abverkauf-mobile.png" alt="Angebot" class="offer-mobile">
     </div>
 
     <div class="brand-banner section">
@@ -140,7 +140,7 @@ permalink: /
         dots: false,
         pauseOnHover: true,
         variableWidth: true,
-        
+
         responsive: [{
             breakpoint: 1024,
             settings: {
@@ -160,6 +160,3 @@ permalink: /
     });
 });
 </script>
-
-
-
