Infomeldung und neues Hero Bild

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,6 +42,7 @@ permalink: /
 </header>
 
 <main>
+
     <div class="text--center">
         <p>Wir sind Ihr Partner wenn es um Fuß-, Knie- oder Rückenfragen geht.
             <br> Unsere Betriebsstruktur der kurzen Wege ermöglicht es uns, schnell und
@@ -50,7 +51,28 @@ permalink: /
         </p>
         <p>Wir freuen uns auf Ihren Besuch!</p>
     </div>
-    <div class="section">
+		<div class="text--center card card--info section">
+			<h2 class="centered" style="margin-bottom: 10px;">Aktuelle Info</h2>
+			<p class="centered red" >Wir sind für Sie da mit geänderten Öffnungszeiten.
+			<br>Bitte vorher anrufen und ggf. Termin vereinbaren.</p>
+			<div class="open footer-section" style="margin-bottom: 10px;">
+					<div>
+							<strong>Montag und Donnerstag</strong>
+							<br>8:30-17:30
+					</div>
+					<div>
+							<br><strong>Dienstag, Mittwoch und Freitag</strong>
+							<br>8:30-17:00
+					</div>
+					<div>
+							<br><strong>Samstag</strong>
+							<br>geschlossen
+					</div>
+			</div>
+			<strong class="centered" style="margin-bottom: 10px; margin-top: 10px;">Unser Team wünscht Ihnen alles Gute <br>und vor allem Gesundheit.</strong>
+
+		</div>
+    <div class="section" style="margin-top: 100px;">
         <h2>Orthopädie-Schuhtechnik</h2>
         <table class="overview">
             <tr>
